--- a/Themes/Akame/Akame.theme.css
+++ b/Themes/Akame/Akame.theme.css
@@ -4,7 +4,7 @@
 /*MAKE SURE THE LINKS YOU USE START WITH HTTPS:// OR THEY WONT WORK*/		
 
 .app {
-    background-image: url("https://i.imgur.com/6DOrpXX.jpg") !important;
+    background-image: url("https://i.hizliresim.com/1gJpoD.png") !important;
     background-size: cover !important;
 }
 .theme-dark .layer, .theme-dark .layers, .theme-white .layer, .theme-white .layers {
@@ -12,7 +12,7 @@
 }
 .callout-backdrop {
     opacity: 1 !important;
-    background-image: url("https://i.imgur.com/6DOrpXX.jpg") !important;
+    background-image: url("https://i.hizliresim.com/1gJpoD.png") !important;
     background-size: cover !important;
     -webkit-filter: brightness(35%);
 }
